@@ -21,7 +21,8 @@ plugins {
 }
 
 configurations {
-    nullawayJar
+    // A configuration holding the jars for the oldest supported version of Error Prone, to use with tests
+    errorProneOldest
 }
 
 dependencies {
@@ -64,6 +65,14 @@ dependencies {
     testImplementation deps.test.mockito
     testImplementation deps.test.javaxAnnotationApi
     testImplementation deps.test.assertJ
+    // This is for a test exposing a CFG construction failure in the Checker Framework.  We can probably remove it once
+    // the issue is fixed upstream and we update. See https://github.com/typetools/checker-framework/issues/6396.
+    testImplementation 'org.apache.spark:spark-sql_2.12:3.3.2'
+
+    errorProneOldest deps.build.errorProneCheckApiOld
+    errorProneOldest(deps.build.errorProneTestHelpersOld) {
+        exclude group: "junit", module: "junit"
+    }
 }
 
 javadoc {
@@ -73,63 +82,60 @@ javadoc {
 apply plugin: 'com.vanniktech.maven.publish'
 
 // These --add-exports arguments are required when targeting JDK 11+ since Error Prone and NullAway access a bunch of
-// JDK-internal APIs that are not exposed otherwise.  Since we currently target JDK 8, we do not need to pass the
-// arguments, as encapsulation of JDK internals is not enforced on JDK 8.  In fact, the arguments cause a compiler error
-// when targeting JDK 8.  Leaving commented so we can easily add them back once we target JDK 11.
-//    tasks.withType(JavaCompile).configureEach {
-//        options.compilerArgs += [
-//                "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-//                "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-//                "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-//                "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-//                "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-//                "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-//                "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-//                "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-//                "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-//                "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-//                "--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED",
-//        ]
-//    }
+// JDK-internal APIs that are not exposed otherwise.
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED",
+    ]
+}
 
-// Create a task to test on JDK 8
-def jdk8Test = tasks.register("testJdk8", Test) {
-    onlyIf {
-        // Only if we are using a version of Error Prone compatible with JDK 8
-        deps.versions.errorProneApi == "2.10.0"
-    }
-
+// Create a task to test with the oldest supported version of Error Prone
+// (while still building against the latest supported version)
+def epOldestTest = tasks.register("testErrorProneOldest", Test) {
     javaLauncher = javaToolchains.launcherFor {
-        languageVersion = JavaLanguageVersion.of(8)
+        languageVersion = JavaLanguageVersion.of(11)
     }
 
-    description = "Runs the test suite on JDK 8"
+    description = "Runs the test suite using the oldest supported version of Error Prone"
     group = LifecycleBasePlugin.VERIFICATION_GROUP
 
     // Copy inputs from normal Test task.
     def testTask = tasks.getByName("test")
-    classpath = testTask.classpath
+    // A bit of a hack: we add the dependencies of the oldest supported Error Prone version to the _beginning_ of the
+    // classpath, so that they are used instead of the latest version.  This exercises the scenario of building
+    // NullAway against the latest supported Error Prone version but then running on the oldest supported version.
+    classpath = configurations.errorProneOldest + testTask.classpath
+
     testClassesDirs = testTask.testClassesDirs
-    jvmArgs "-Xbootclasspath/p:${configurations.errorproneJavac.asPath}"
-    filter {
-        // JDK 8 does not support diamonds on anonymous classes
-        excludeTestsMatching "com.uber.nullaway.NullAwayJSpecifyGenericsTests.overrideDiamondAnonymousClass"
-        // tests cannot run on JDK 8 since Mockito version no longer supports it
-        excludeTestsMatching "com.uber.nullaway.NullAwaySerializationTest.initializationError"
-        excludeTestsMatching "com.uber.nullaway.handlers.contract.ContractUtilsTest.getEmptyAntecedent"
-    }
+
+    jvmArgs += [
+        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        // Accessed by Lombok tests
+        "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+    ]
 }
 
 tasks.named('check').configure {
-    dependsOn(jdk8Test)
-}
-
-tasks.named('testJdk21', Test).configure {
-    filter {
-        // JSpecify Generics tests do not yet pass on JDK 21
-        // See https://github.com/uber/NullAway/issues/827
-        excludeTestsMatching "com.uber.nullaway.NullAwayJSpecifyGenericsTests"
-    }
+    dependsOn(epOldestTest)
 }
 
 // Create a task to build NullAway with NullAway checking enabled
